y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarationsOP
    3                         | FunctionDeclaration FunctionsAndDeclarationsOP
    4                         | Declaration FunctionsAndDeclarationsOP

    5 FunctionsAndDeclarationsOP: FunctionsAndDeclarations
    6                           | %empty

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE DeclarationsAndStatementsOp RBRACE

    9 DeclarationsAndStatementsOp: DeclarationsAndStatements
   10                            | %empty

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration ParameterListOp

   18 ParameterListOp: COMMA ParameterDeclaration ParameterListOp
   19                | %empty

   20 ParameterDeclaration: TypeSpec
   21                     | TypeSpec ID

   22 Declaration: TypeSpec Declarator DeclarationOp SEMI
   23            | error SEMI

   24 DeclarationOp: COMMA Declarator DeclarationOp
   25              | %empty

   26 TypeSpec: CHAR
   27         | INT
   28         | VOID
   29         | SHORT
   30         | DOUBLE

   31 Declarator: ID
   32           | ID ASSIGN Expr

   33 StatementAux: StatementError
   34             | StatementError StatementAux

   35 StatementError: Statement
   36               | error SEMI

   37 Statement: SEMI
   38          | Expr SEMI
   39          | LBRACE StatementAux RBRACE
   40          | LBRACE RBRACE
   41          | IF LPAR Expr RPAR StatementError
   42          | IF LPAR Expr RPAR StatementError ELSE StatementError
   43          | WHILE LPAR Expr RPAR StatementError
   44          | RETURN SEMI
   45          | RETURN Expr SEMI
   46          | LBRACE error RBRACE

   47 Expr: Expr ASSIGN Expr
   48     | Expr COMMA Expr
   49     | Expr PLUS Expr
   50     | Expr MINUS Expr
   51     | Expr MUL Expr
   52     | Expr DIV Expr
   53     | Expr MOD Expr
   54     | Expr OR Expr
   55     | Expr AND Expr
   56     | Expr BITWISEAND Expr
   57     | Expr BITWISEOR Expr
   58     | Expr BITWISEXOR Expr
   59     | Expr EQ Expr
   60     | Expr NE Expr
   61     | Expr LE Expr
   62     | Expr GE Expr
   63     | Expr LT Expr
   64     | Expr GT Expr
   65     | PLUS Expr
   66     | MINUS Expr
   67     | NOT Expr
   68     | ID LPAR ExprOp4 RPAR
   69     | ID
   70     | INTLIT
   71     | CHRLIT
   72     | REALLIT
   73     | LPAR Expr RPAR
   74     | ID LPAR error RPAR
   75     | LPAR error RPAR

   76 ExprOp4: ExprOp4 COMMA Expr
   77        | Expr
   78        | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256) 23 36 46 74 75
    CHAR (258) 26
    ELSE (259) 42
    WHILE (260) 43
    IF (261) 41 42
    INT (262) 27
    SHORT (263) 29
    DOUBLE (264) 30
    RETURN (265) 44 45
    VOID (266) 28
    BITWISEAND (267) 56
    BITWISEOR (268) 57
    BITWISEXOR (269) 58
    AND <str> (270) 55
    ASSIGN <str> (271) 32 47
    MUL <str> (272) 51
    COMMA <str> (273) 18 24 48 76
    DIV <str> (274) 52
    EQ <str> (275) 59
    GE <str> (276) 62
    GT <str> (277) 64
    LBRACE <str> (278) 8 39 40 46
    LE <str> (279) 61
    LPAR <str> (280) 16 41 42 43 68 73 74 75
    LT <str> (281) 63
    MINUS <str> (282) 50 66
    MOD <str> (283) 53
    NE <str> (284) 60
    NOT <str> (285) 67
    OR <str> (286) 54
    PLUS <str> (287) 49 65
    RBRACE <str> (288) 8 39 40 46
    RPAR (289) 16 41 42 43 68 73 74 75
    SEMI (290) 15 22 23 36 37 38 44 45
    RESERVED <str> (291)
    CHRLIT <str> (292) 71
    ID <str> (293) 16 21 31 32 68 69 74
    REALLIT <str> (294) 72
    INTLIT <str> (295) 70
    THEN (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program <node> (43)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (44)
        on left: 2 3 4
        on right: 1 5
    FunctionsAndDeclarationsOP <node> (45)
        on left: 5 6
        on right: 2 3 4
    FunctionDefinition <node> (46)
        on left: 7
        on right: 2
    FunctionBody <node> (47)
        on left: 8
        on right: 7
    DeclarationsAndStatementsOp <node> (48)
        on left: 9 10
        on right: 8
    DeclarationsAndStatements <node> (49)
        on left: 11 12 13 14
        on right: 9 11 12
    FunctionDeclaration <node> (50)
        on left: 15
        on right: 3
    FunctionDeclarator <node> (51)
        on left: 16
        on right: 7 15
    ParameterList <node> (52)
        on left: 17
        on right: 16
    ParameterListOp <node> (53)
        on left: 18 19
        on right: 17 18
    ParameterDeclaration <node> (54)
        on left: 20 21
        on right: 17 18
    Declaration <node> (55)
        on left: 22 23
        on right: 4 12 14
    DeclarationOp <node> (56)
        on left: 24 25
        on right: 22 24
    TypeSpec <node> (57)
        on left: 26 27 28 29 30
        on right: 7 15 20 21 22
    Declarator <node> (58)
        on left: 31 32
        on right: 22 24
    StatementAux <node> (59)
        on left: 33 34
        on right: 34 39
    StatementError <node> (60)
        on left: 35 36
        on right: 33 34 41 42 43
    Statement <node> (61)
        on left: 37 38 39 40 41 42 43 44 45 46
        on right: 11 13 35
    Expr <node> (62)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 32 38 41 42 43 45 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 73 76 77
    ExprOp4 <node> (63)
        on left: 76 77 78
        on right: 68 76


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   23 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   26 TypeSpec: CHAR .

    $default  reduce using rule 26 (TypeSpec)


State 3

   27 TypeSpec: INT .

    $default  reduce using rule 27 (TypeSpec)


State 4

   29 TypeSpec: SHORT .

    $default  reduce using rule 29 (TypeSpec)


State 5

   30 TypeSpec: DOUBLE .

    $default  reduce using rule 30 (TypeSpec)


State 6

   28 TypeSpec: VOID .

    $default  reduce using rule 28 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .

    $default  reduce using rule 1 (Program)


State 9

    2 FunctionsAndDeclarations: FunctionDefinition . FunctionsAndDeclarationsOP

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarationsOP)

    FunctionsAndDeclarations    go to state 15
    FunctionsAndDeclarationsOP  go to state 16
    FunctionDefinition          go to state 9
    FunctionDeclaration         go to state 10
    Declaration                 go to state 11
    TypeSpec                    go to state 12


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration . FunctionsAndDeclarationsOP

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarationsOP)

    FunctionsAndDeclarations    go to state 15
    FunctionsAndDeclarationsOP  go to state 17
    FunctionDefinition          go to state 9
    FunctionDeclaration         go to state 10
    Declaration                 go to state 11
    TypeSpec                    go to state 12


State 11

    4 FunctionsAndDeclarations: Declaration . FunctionsAndDeclarationsOP

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 6 (FunctionsAndDeclarationsOP)

    FunctionsAndDeclarations    go to state 15
    FunctionsAndDeclarationsOP  go to state 18
    FunctionDefinition          go to state 9
    FunctionDeclaration         go to state 10
    Declaration                 go to state 11
    TypeSpec                    go to state 12


State 12

    7 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   22 Declaration: TypeSpec . Declarator DeclarationOp SEMI

    ID  shift, and go to state 19

    FunctionDeclarator  go to state 20
    Declarator          go to state 21


State 13

   23 Declaration: error SEMI .

    $default  reduce using rule 23 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    5 FunctionsAndDeclarationsOP: FunctionsAndDeclarations .

    $default  reduce using rule 5 (FunctionsAndDeclarationsOP)


State 16

    2 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarationsOP .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 17

    3 FunctionsAndDeclarations: FunctionDeclaration FunctionsAndDeclarationsOP .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 18

    4 FunctionsAndDeclarations: Declaration FunctionsAndDeclarationsOP .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 19

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   31 Declarator: ID .
   32           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 22
    LPAR    shift, and go to state 23

    $default  reduce using rule 31 (Declarator)


State 20

    7 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 24
    SEMI    shift, and go to state 25

    FunctionBody  go to state 26


State 21

   22 Declaration: TypeSpec Declarator . DeclarationOp SEMI

    COMMA  shift, and go to state 27

    $default  reduce using rule 25 (DeclarationOp)

    DeclarationOp  go to state 28


State 22

   32 Declarator: ID ASSIGN . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 37


State 23

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 38
    ParameterDeclaration  go to state 39
    TypeSpec              go to state 40


State 24

    8 FunctionBody: LBRACE . DeclarationsAndStatementsOp RBRACE

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 41
    IF       shift, and go to state 42
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 43
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 44
    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    SEMI     shift, and go to state 45
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    RBRACE  reduce using rule 10 (DeclarationsAndStatementsOp)

    DeclarationsAndStatementsOp  go to state 46
    DeclarationsAndStatements    go to state 47
    Declaration                  go to state 48
    TypeSpec                     go to state 49
    Statement                    go to state 50
    Expr                         go to state 51


State 25

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 26

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 7 (FunctionDefinition)


State 27

   24 DeclarationOp: COMMA . Declarator DeclarationOp

    ID  shift, and go to state 52

    Declarator  go to state 53


State 28

   22 Declaration: TypeSpec Declarator DeclarationOp . SEMI

    SEMI  shift, and go to state 54


State 29

   73 Expr: LPAR . Expr RPAR
   75     | LPAR . error RPAR

    error    shift, and go to state 55
    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 56


State 30

   66 Expr: MINUS . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 57


State 31

   67 Expr: NOT . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 58


State 32

   65 Expr: PLUS . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 59


State 33

   71 Expr: CHRLIT .

    $default  reduce using rule 71 (Expr)


State 34

   68 Expr: ID . LPAR ExprOp4 RPAR
   69     | ID .
   74     | ID . LPAR error RPAR

    LPAR  shift, and go to state 60

    $default  reduce using rule 69 (Expr)


State 35

   72 Expr: REALLIT .

    $default  reduce using rule 72 (Expr)


State 36

   70 Expr: INTLIT .

    $default  reduce using rule 70 (Expr)


State 37

   32 Declarator: ID ASSIGN Expr .
   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr

    BITWISEAND  shift, and go to state 61
    BITWISEOR   shift, and go to state 62
    BITWISEXOR  shift, and go to state 63
    AND         shift, and go to state 64
    ASSIGN      shift, and go to state 65
    MUL         shift, and go to state 66
    DIV         shift, and go to state 68
    EQ          shift, and go to state 69
    GE          shift, and go to state 70
    GT          shift, and go to state 71
    LE          shift, and go to state 72
    LT          shift, and go to state 73
    MINUS       shift, and go to state 74
    MOD         shift, and go to state 75
    NE          shift, and go to state 76
    OR          shift, and go to state 77
    PLUS        shift, and go to state 78

    $default  reduce using rule 32 (Declarator)


State 38

   16 FunctionDeclarator: ID LPAR ParameterList . RPAR

    RPAR  shift, and go to state 79


State 39

   17 ParameterList: ParameterDeclaration . ParameterListOp

    COMMA  shift, and go to state 80

    $default  reduce using rule 19 (ParameterListOp)

    ParameterListOp  go to state 81


State 40

   20 ParameterDeclaration: TypeSpec .
   21                     | TypeSpec . ID

    ID  shift, and go to state 82

    $default  reduce using rule 20 (ParameterDeclaration)


State 41

   43 Statement: WHILE . LPAR Expr RPAR StatementError

    LPAR  shift, and go to state 83


State 42

   41 Statement: IF . LPAR Expr RPAR StatementError
   42          | IF . LPAR Expr RPAR StatementError ELSE StatementError

    LPAR  shift, and go to state 84


State 43

   44 Statement: RETURN . SEMI
   45          | RETURN . Expr SEMI

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    SEMI     shift, and go to state 85
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 86


State 44

   39 Statement: LBRACE . StatementAux RBRACE
   40          | LBRACE . RBRACE
   46          | LBRACE . error RBRACE

    error    shift, and go to state 87
    WHILE    shift, and go to state 41
    IF       shift, and go to state 42
    RETURN   shift, and go to state 43
    LBRACE   shift, and go to state 44
    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    RBRACE   shift, and go to state 88
    SEMI     shift, and go to state 45
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    StatementAux    go to state 89
    StatementError  go to state 90
    Statement       go to state 91
    Expr            go to state 51


State 45

   37 Statement: SEMI .

    $default  reduce using rule 37 (Statement)


State 46

    8 FunctionBody: LBRACE DeclarationsAndStatementsOp . RBRACE

    RBRACE  shift, and go to state 92


State 47

    9 DeclarationsAndStatementsOp: DeclarationsAndStatements .
   11 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   12                          | DeclarationsAndStatements . Declaration

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 41
    IF       shift, and go to state 42
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 43
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 44
    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    SEMI     shift, and go to state 45
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    RBRACE  reduce using rule 9 (DeclarationsAndStatementsOp)

    Declaration  go to state 93
    TypeSpec     go to state 49
    Statement    go to state 94
    Expr         go to state 51


State 48

   14 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 14 (DeclarationsAndStatements)


State 49

   22 Declaration: TypeSpec . Declarator DeclarationOp SEMI

    ID  shift, and go to state 52

    Declarator  go to state 21


State 50

   13 DeclarationsAndStatements: Statement .

    $default  reduce using rule 13 (DeclarationsAndStatements)


State 51

   38 Statement: Expr . SEMI
   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr

    BITWISEAND  shift, and go to state 61
    BITWISEOR   shift, and go to state 62
    BITWISEXOR  shift, and go to state 63
    AND         shift, and go to state 64
    ASSIGN      shift, and go to state 65
    MUL         shift, and go to state 66
    COMMA       shift, and go to state 67
    DIV         shift, and go to state 68
    EQ          shift, and go to state 69
    GE          shift, and go to state 70
    GT          shift, and go to state 71
    LE          shift, and go to state 72
    LT          shift, and go to state 73
    MINUS       shift, and go to state 74
    MOD         shift, and go to state 75
    NE          shift, and go to state 76
    OR          shift, and go to state 77
    PLUS        shift, and go to state 78
    SEMI        shift, and go to state 95


State 52

   31 Declarator: ID .
   32           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 22

    $default  reduce using rule 31 (Declarator)


State 53

   24 DeclarationOp: COMMA Declarator . DeclarationOp

    COMMA  shift, and go to state 27

    $default  reduce using rule 25 (DeclarationOp)

    DeclarationOp  go to state 96


State 54

   22 Declaration: TypeSpec Declarator DeclarationOp SEMI .

    $default  reduce using rule 22 (Declaration)


State 55

   75 Expr: LPAR error . RPAR

    RPAR  shift, and go to state 97


State 56

   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr
   73     | LPAR Expr . RPAR

    BITWISEAND  shift, and go to state 61
    BITWISEOR   shift, and go to state 62
    BITWISEXOR  shift, and go to state 63
    AND         shift, and go to state 64
    ASSIGN      shift, and go to state 65
    MUL         shift, and go to state 66
    COMMA       shift, and go to state 67
    DIV         shift, and go to state 68
    EQ          shift, and go to state 69
    GE          shift, and go to state 70
    GT          shift, and go to state 71
    LE          shift, and go to state 72
    LT          shift, and go to state 73
    MINUS       shift, and go to state 74
    MOD         shift, and go to state 75
    NE          shift, and go to state 76
    OR          shift, and go to state 77
    PLUS        shift, and go to state 78
    RPAR        shift, and go to state 98


State 57

   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr
   66     | MINUS Expr .

    $default  reduce using rule 66 (Expr)


State 58

   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr
   67     | NOT Expr .

    $default  reduce using rule 67 (Expr)


State 59

   47 Expr: Expr . ASSIGN Expr
   48     | Expr . COMMA Expr
   49     | Expr . PLUS Expr
   50     | Expr . MINUS Expr
   51     | Expr . MUL Expr
   52     | Expr . DIV Expr
   53     | Expr . MOD Expr
   54     | Expr . OR Expr
   55     | Expr . AND Expr
   56     | Expr . BITWISEAND Expr
   57     | Expr . BITWISEOR Expr
   58     | Expr . BITWISEXOR Expr
   59     | Expr . EQ Expr
   60     | Expr . NE Expr
   61     | Expr . LE Expr
   62     | Expr . GE Expr
   63     | Expr . LT Expr
   64     | Expr . GT Expr
   65     | PLUS Expr .

    $default  reduce using rule 65 (Expr)


State 60

   68 Expr: ID LPAR . ExprOp4 RPAR
   74     | ID LPAR . error RPAR

    error    shift, and go to state 99
    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    COMMA  reduce using rule 78 (ExprOp4)
    RPAR   reduce using rule 78 (ExprOp4)

    Expr     go to state 100
    ExprOp4  go to state 101


State 61

   56 Expr: Expr BITWISEAND . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 102


State 62

   57 Expr: Expr BITWISEOR . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 103


State 63

   58 Expr: Expr BITWISEXOR . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 104


State 64

   55 Expr: Expr AND . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 105


State 65

   47 Expr: Expr ASSIGN . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 106


State 66

   51 Expr: Expr MUL . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 107


State 67

   48 Expr: Expr COMMA . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 108


State 68

   52 Expr: Expr DIV . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 109


State 69

   59 Expr: Expr EQ . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 110


State 70

   62 Expr: Expr GE . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 111


State 71

   64 Expr: Expr GT . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 112


State 72

   61 Expr: Expr LE . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 113


State 73

   63 Expr: Expr LT . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 114


State 74

   50 Expr: Expr MINUS . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 115


State 75

   53 Expr: Expr MOD . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 116


State 76

   60 Expr: Expr NE . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 117


State 77

   54 Expr: Expr OR . Expr

    LPAR     shift, and go to state 29
    MINUS    shift, and go to state 30
    NOT      shift, and go to state 31
    PLUS     shift, and go to state 32
    CHRLIT   shift, and go to state 33
    ID       shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36

    Expr  go to state 118


State 78

   49 Expr: Expr PLUS . Expr
